--- a/GFM/localisation/0000_GFM_Dukecza.csv
+++ b/GFM/localisation/0000_GFM_Dukecza.csv
@@ -224,9 +224,15 @@ PTG_prussian_constitutionalism;Mapuche;;;;;;;;;
 PTG_hms_government;Kingdom of Araucania and Patagonia;;;;;;;;;
 IQC;Tawantinsuyu;;;;;;;;;
 IQC_colonial_company;Iquicha;;;;;;;;;
+IQC_colonial_company_ADJ;Iquichan;;;;;;;;;
 IQC_absolute_empire;Iquicha;;;;;;;;;;;;;
+IQC_absolute_empire_ADJ;Iquichan;;;;;;;;;
 IQC_semi_constitutional_empire;Iquicha;;;;;;;;;;;;;
+IQC_semi_constitutional_empire_ADJ;Iquichan;;;;;;;;;
 IQC_constitutional_empire;Iquicha;;;;;;;;;;;;;
+IQC_constitutional_empire_ADJ;Iquichan;;;;;;;;;
+IQC_presidential_dictatorship;Iquicha;;;;;;;;;;;;;
+IQC_presidential_dictatorship_ADJ;Iquichan;;;;;;;;;
 IQC_ADJ;Inca;;;;;;;;;
 PROV4069;Isla de los Estados;;;;;;;;;
 PROV4068;Huanta;;;;;;;;;
