yeah I just fixed AI uncolonized once again

--- a/GFM/localisation/00_HPM_modifiers.csv
+++ b/GFM/localisation/00_HPM_modifiers.csv
@@ -680,3 +680,5 @@ slave_trade_decadence_1;The Decadence of the Slave Trade;;;;;;;;;;;;;
 slave_trade_decadence_2;The Decadence of the Slave Trade;;;;;;;;;;;;;
 slave_trade_decadence_3;The Decadence of the Slave Trade;;;;;;;;;;;;;
 slave_trade_decadence_4;The Decadence of the Slave Trade;;;;;;;;;;;;;
+movenowpleases;Modifier to move AI troops - 2 months;;;;;;;;;;;;;
+movenowplease;Modifier to move AI troops - 1 month;;;;;;;;;;;;;
