abt 20 events and 5 decisions need desc tho

--- a/GFM/localisation/00_John.csv
+++ b/GFM/localisation/00_John.csv
@@ -101,3 +101,25 @@ OLDENBURG_REFUSED_TITLE;Choosing a new heir;;;;;;;;;;;;;
 OLDENBURG_REFUSED_DESC;
 OUR_LAST_HOPE_TITLE;The last hope;;;;;;;;;;;;;
 OUR_LAST_HOPE_DESC;
+DEATHOSCARI_TITLE;The Death of King Oscar I;;;;;;;;;;;;;
+DEATHOSCARI_DESC;
+DEATHCHARLESXV_TITLE;The Death King of Charles XV;;;;;;;;;;;;;
+DEATHCHARLESXV_DESC;
+DEATHOSCARII_TITLE;Death of King Oscar II;;;;;;;;;;;;;
+DEATHOSCARII_DESC;
+DEATHAUGUSTUSI_TITLE;Death of King Augustus I;;;;;;;;;;;;;
+DEATHAUGUSTUSI_DESC;
+DEATHPETERI_TITLE;Death of King Peter I;;;;;;;;;;;;;
+DEATHPETERI_DESC;
+DEATHFREDERICKAUGUSTUSI_TITLE; Death of King Frederick Augustus I;;;;;;;;;;;;;
+DEATHFREDERICKAUGUSTUSI_DESC;
+DEMANDINGPOMERANIA_TITLE;The Swedish Empire demands Pomerania;;;;;;;;;;;;;
+DEMANDINGPOMERANIA_DESC;
+DEMANDINGNORWAY_TITLE;Sweden demands Norway;;;;;;;;;;;;;
+DEMANDINGNORWAY_DESC;
+SCANDINAVIA_WAR_SWE_WIN_TITLE;Triump over Denmark-Norway;;;;;;;;;;;;;
+SCANDINAVIA_WAR_SWE_WIN_DESC;
+SCANDINAVIA_WAR_DNN_WIN_TITLE;Trimup over the Swedish Empire;;;;;;;;;;;;;
+SCANDINAVIA_WAR_DNN_WIN_DESC;
+OUR_CLAIMS_SWH_TITLE;Claims in Schleswig-Holstein?;;;;;;;;;;;;;
+OUR_CLAIMS_SWH_DESC;
