5 events (missing descs)

--- a/GFM/localisation/00_John.csv
+++ b/GFM/localisation/00_John.csv
@@ -123,3 +123,13 @@ SCANDINAVIA_WAR_DNN_WIN_TITLE;Trimup over the Swedish Empire;;;;;;;;;;;;;
 SCANDINAVIA_WAR_DNN_WIN_DESC;
 OUR_CLAIMS_SWH_TITLE;Claims in Schleswig-Holstein?;;;;;;;;;;;;;
 OUR_CLAIMS_SWH_DESC;
+DENMARKSITUATION_TITLE;The Reign of King Frederick VI;;;;;;;;;;;;;
+DENMARKSITUATION_DESC;
+DEATHFREDERICKVI_TITLE;Death of King Frederick VI;;;;;;;;;;;;;
+DEATHFREDERICKVI_DESC;
+DEATHFREDERICKVII_TITLE;Death of King Frederick VII;;;;;;;;;;;;;
+DEATHFREDERICKVII_DESC;
+DEATHCHRISTIANIX_TITLE;Death of King Christian IX;;;;;;;;;;;;;
+DEATHCHRISTIANIX_DESC;
+DEATHFREDERICKVIII_TITLE;Death of King Frederick VIII;;;;;;;;;;;;;
+DEATHFREDERICKVIII_DESC;
