Title Locs for decisions

--- a/GFM/localisation/00_John.csv
+++ b/GFM/localisation/00_John.csv
@@ -133,3 +133,15 @@ DEATHCHRISTIANIX_TITLE;Death of King Christian IX;;;;;;;;;;;;;
 DEATHCHRISTIANIX_DESC;
 DEATHFREDERICKVIII_TITLE;Death of King Frederick VIII;;;;;;;;;;;;;
 DEATHFREDERICKVIII_DESC;
+proclaim_swedish_empire_title;Proclaim the Swedish Empire;;;;;;;;;;;;;
+proclaim_swedish_empire_desc;
+claims_baltic_states_title;Claim the Baltic States;;;;;;;;;;;;;
+claims_baltic_states_desc;
+take_back_pomerania_title;Take back Pomerania;;;;;;;;;;;;;
+take_back_pomerania_desc;
+reconquer_norway_title;Reconquer Norway;;;;;;;;;;;;;
+reconquer_norway_desc;
+crush_danes_title;Crush the Danes;;;;;;;;;;;;;
+crush_danes_desc;
+swedish_independence_title;Declare Swedish Independence;;;;;;;;;;;;;
+swedish_independence_desc;
