--- a/GFM/localisation/00_John.csv
+++ b/GFM/localisation/00_John.csv
@@ -133,6 +133,8 @@ DEATHCHRISTIANIX_TITLE;Death of King Christian IX;;;;;;;;;;;;;
 DEATHCHRISTIANIX_DESC;
 DEATHFREDERICKVIII_TITLE;Death of King Frederick VIII;;;;;;;;;;;;;
 DEATHFREDERICKVIII_DESC;
+SWEDISH_INDEPENDENCE_SWE_WIN_TITLE;The Aftermath of our Independence;;;;;;;;;;;;;
+SWEDISH_INDEPENDENCE_SWE_WIN_DESC;
 proclaim_swedish_empire_title;Proclaim the Swedish Empire;;;;;;;;;;;;;
 proclaim_swedish_empire_desc;
 claims_baltic_states_title;Claim the Baltic States;;;;;;;;;;;;;
@@ -145,3 +147,4 @@ crush_danes_title;Crush the Danes;;;;;;;;;;;;;
 crush_danes_desc;
 swedish_independence_title;Declare Swedish Independence;;;;;;;;;;;;;
 swedish_independence_desc;
+scandinavian_population_growth;Scandinavian Population Boom;;;;;;;;;;;;;
