added 1 decision and fixed another

--- a/GFM/localisation/00_John.csv
+++ b/GFM/localisation/00_John.csv
@@ -147,4 +147,5 @@ crush_danes_title;Crush the Danes;;;;;;;;;;;;;
 crush_danes_desc;
 swedish_independence_title;Declare Swedish Independence;;;;;;;;;;;;;
 swedish_independence_desc;
-scandinavian_population_growth;Scandinavian Population Boom;;;;;;;;;;;;;
+small_scandinavian_population_growth;Small Scandinavian Population Boom;;;;;;;;;;;;;
+big_scandinavian_population_growth;Big Scandinavian Population Boom;;;;;;;;;;;;;
