Event crash fix

--- a/GFM/localisation/00_John.csv
+++ b/GFM/localisation/00_John.csv
@@ -1,3 +1,4 @@
+#Event Loc
 1925DALIEARTHQUAKE;Today at 2:42 PM, a violent earthquake struck Dali, a city in western Yunnan, the location of its epicenter. The earthquake itself was caused by movement on the northwestern part of the Red River Fault, leaving 76,000 homes destroyed due to the shaking and its resulting fires. The tremors were so severe that it even caused the city walls of Dali to entirely collapse. About 3,600 inhabitants of the city have been tragically killed in the aftermath. We stand united in solidarity as we mourn the many lives lost and support the countless others who now find themselves displaced, injured, or bereft.;;;;;;;;;;;;;
 1925DALIOPT;What a tragedy!;;;;;;;;;;;;;
 1921MASSAWAEARTHQUAKE;The Eritrean city of Massawa has been struck by a mighty earthquake. The first aftershock was of similar magnitude to the initial quake, causing even more damage. The harbor of Massawa has been utterly devastated, with reports claiming it that at least 51 civilians have lost their lives in the city. It is reported that the earthquake was felt as far away as the inland cities of Asmara and Dekemhare.;;;;;;;;;;;;;
@@ -135,6 +136,12 @@ DEATHFREDERICKVIII_TITLE;Death of King Frederick VIII;;;;;;;;;;;;;
 DEATHFREDERICKVIII_DESC;
 SWEDISH_INDEPENDENCE_SWE_WIN_TITLE;The Aftermath of our Independence;;;;;;;;;;;;;
 SWEDISH_INDEPENDENCE_SWE_WIN_DESC;
+SCANDINAVIAN_PROSPERITY_TITLE;Scandinavian prosperity;;;;;;;;;;;;;
+SCANDINAVIAN_PROSPERITY_DESC;
+SWEDISH_COUP_TITLE;Swedish Coup of $YEAR$;;;;;;;;;;;;;
+SWEDISH_COUP_DESC;
+---------------------------------------------------------------------------------
+#Decision Loc
 proclaim_swedish_empire_title;Proclaim the Swedish Empire;;;;;;;;;;;;;
 proclaim_swedish_empire_desc;
 claims_baltic_states_title;Claim the Baltic States;;;;;;;;;;;;;
@@ -147,5 +154,10 @@ crush_danes_title;Crush the Danes;;;;;;;;;;;;;
 crush_danes_desc;
 swedish_independence_title;Declare Swedish Independence;;;;;;;;;;;;;
 swedish_independence_desc;
+scandinavian_prosperity_title;Enact Scandinavian Prosperity;;;;;;;;;;;;;
+scandinavian_prosperity_desc;
+---------------------------------------------------------------------------------
+#Modifier Loc
 small_scandinavian_population_growth;Small Scandinavian Population Boom;;;;;;;;;;;;;
 big_scandinavian_population_growth;Big Scandinavian Population Boom;;;;;;;;;;;;;
+scandinavian_immigrant_push;Scandinavian Population Emigration;;;;;;;;;;;;;
