--- a/GFM/localisation/00_John.csv
+++ b/GFM/localisation/00_John.csv
@@ -140,6 +140,10 @@ SCANDINAVIAN_PROSPERITY_TITLE;Scandinavian prosperity;;;;;;;;;;;;;
 SCANDINAVIAN_PROSPERITY_DESC;
 SWEDISH_COUP_TITLE;Swedish Coup of $YEAR$;;;;;;;;;;;;;
 SWEDISH_COUP_DESC;
+POLISH_HELP_TITLE;The Polish ask for Help;;;;;;;;;;;;;
+POLISH_HELP_DESC;
+PUPPET_PLR_TITLE;Poland becomes our Puppet;;;;;;;;;;;;;
+PUPPET_PLR_TITLE;
 ---------------------------------------------------------------------------------
 #Decision Loc
 proclaim_swedish_empire_title;Proclaim the Swedish Empire;;;;;;;;;;;;;
