loc title for decision

--- a/GFM/localisation/00_John.csv
+++ b/GFM/localisation/00_John.csv
@@ -157,6 +157,8 @@ swedish_independence_title;Declare Swedish Independence;;;;;;;;;;;;;
 swedish_independence_desc;
 scandinavian_prosperity_title;Enact Scandinavian Prosperity;;;;;;;;;;;;;
 scandinavian_prosperity_desc;
+disband_DNN_title;Disband Denmark-Norway;;;;;;;;;;;;;
+disband_DNN_desc;
 small_scandinavian_population_growth;Small Scandinavian Population Boom;;;;;;;;;;;;;
 big_scandinavian_population_growth;Big Scandinavian Population Boom;;;;;;;;;;;;;
 scandinavian_immigrant_push;Scandinavian Population Emigration;;;;;;;;;;;;;
