Transcaspia and Khiva pops yippee

--- a/GFM More Cultures/localisation/00000culture submod.csv
+++ b/GFM More Cultures/localisation/00000culture submod.csv
@@ -26,7 +26,7 @@ aynu;Äynu;;;;;;;;;;;;;
 chuanqing;Chuanqing;;;;;;;;;;;;;
 tunbao;Tunbao;;;;;;;;;;;;;
 bonan;Bonan;;;;;;;;;;;;;
-qaraqalpaq;Qaraqalpaq;;;;;;;;;;;;;
+qaraqalpaq;Karakalpak;;;;;;;;;;;;;
 hoklo;Hoklo;;;;;;;;;;;;;
 leizhou;Leizhou;;;;;;;;;;;;;
 hokchia;Hokchia;;;;;;;;;;;;;
