--- a/GFM/localisation/00_John.csv
+++ b/GFM/localisation/00_John.csv
@@ -83,18 +83,14 @@ KINGAUGUSTUS_I_TITLE;Duke Augustus von Holstein-Gottorp;;;;;;;;;;;;;
 KINGAUGUSTUS_I_DESC;
 KINGCHRISTIAN_III_TITLE;King Christian XIII;;;;;;;;;;;;;
 KINGCHRISTIAN_III_DESC;
-ACCEPT_ASKING_DENAMARK_TITLE;The Swedish Proposal?;;;;;;;;;;;;;
-ACCEPT_ASKING_DENAMARK_DESC;
-REFUSE_ASKING_DENMARK_TITLE;The Swedish Proposal?;;;;;;;;;;;;;
-REFUSE_ASKING_DENMARK_DESC;
+ASKING_DENAMARK_TITLE;The Swedish Proposal?;;;;;;;;;;;;;
+ASKING_DENAMARK_DESC;
 DENMARK_ACCEPTED_TITLE;The Kalmar Union;;;;;;;;;;;;;
 DENMARK_ACCEPTED_DESC;
 DENMARK_REFUSED_TITLE;Choosing a new heir;;;;;;;;;;;;;
 DENMARK_REFUSED_DESC;
-ACCEPT_ASKING_OLDENBURG_TITLE;The Swedish Proposal?;;;;;;;;;;;;;
-ACCEPT_ASKING_OLDENBURG_DESC;
-REFUSE_ASKING_OLDENBURG_TITLE;The Swedish Proposal?;;;;;;;;;;;;;
-REFUSE_ASKING_OLDENBURG_DESC;
+ASKING_OLDENBURG_TITLE;The Swedish Proposal?;;;;;;;;;;;;;
+ASKING_OLDENBURG_DESC;
 OLDENBURG_ACCEPTED_TITLE;Glory to Augustus King of Sweden;;;;;;;;;;;;;
 OLDENBURG_ACCEPTED_DESC;
 OLDENBURG_REFUSED_TITLE;Choosing a new heir;;;;;;;;;;;;;
