--- a/GFM/localisation/00_John.csv
+++ b/GFM/localisation/00_John.csv
@@ -139,6 +139,8 @@ POLISH_HELP_TITLE;The Polish ask for Help;;;;;;;;;;;;;
 POLISH_HELP_DESC;
 PUPPET_PLR_TITLE;Poland becomes our Puppet;;;;;;;;;;;;;
 PUPPET_PLR_TITLE;
+DEMANDINGPOMERANIA_PRU_WIN_TITLE;Renouncing our Claims in Pomerania;;;;;;;;;;;;;
+DEMANDINGPOMERANIA_PRU_WIN_TITLE;
 proclaim_swedish_empire_title;Proclaim the Swedish Empire;;;;;;;;;;;;;
 proclaim_swedish_empire_desc;
 claims_baltic_states_title;Claim the Baltic States;;;;;;;;;;;;;
