--- a/GFM/localisation/000_Garcia.csv
+++ b/GFM/localisation/000_Garcia.csv
@@ -53,7 +53,7 @@ EVTOPTB4206987;Appoint a commission to 'look into' more autonomy for Poland.;;;;
 banamex_title;Banco Nacional de México;;;;;;;;;;;;;
 banamex_desc;After the Second French intervention, Mexico received a major flux of direct foreign investment in its banking sector, mostly of French origins. The idea of a great national bank for the Mexican people has been popular from the poor ones, to the wealthy ones.;;;;;;;;;;;;;
 banamex_modifier;Banamex;;;;;;;;;;;;;
-banamex_modifier_desc;The national bank serves as an agent from the federal government in managing the national deblt; as well as payments from tax obligations. It also makes paper money emissions as well as granting financing and savings to the public.;;;;;;;;;;;;;
+banamex_modifier_desc;The national bank serves as an agent from the federal government in managing the national deblt, as well as payments from tax obligations. It also makes paper money emissions as well as granting financing and savings to the public.;;;;;;;;;;;;;
 return_federalism_mex_1847_title;The Return of the 1824 Constitution;;;;;;;;;;;;;
 return_federalism_mex_1847_desc;Now that we are at war with the Americans, our government has to take action in order to pacify Mexico. Re-instating the 1824 Constitution would bring back federalism and appease the liberals who have, time and time again, led insurrections since the beginning of unitarianism in 1835. Thus, we can unify our country to defeat the Yankees.;;;;;;;;;;;;;
 treaty_of_peace_and_friendship_spain_mex_title;Treaty of Peace and Friendship between Spain and Mexico;;;;;;;;;;;;;
