--- a/GFM/localisation/000_persia_map.csv
+++ b/GFM/localisation/000_persia_map.csv
@@ -64,7 +64,7 @@ PROV1145;Bunpoor;;;;;;;;;;;;;
 PROV1158;al-Nefud;;;;;;;;;;;;;
 PROV1185;Taraz;;;;;;;;;;;;;
 PROV1186;Alma Ata;;;;;;;;;;;;;
-PROV1188;Qaratal;;;;;;;;;;;;;
+PROV1188;Lopsin;;;;;;;;;;;;;
 PROV1189;Bishkek;;;;;;;;;;;;;
 PROV1190;Kyzylsuu;;;;;;;;;;;;;
 PROV1191;Khiva;;;;;;;;;;;;;
