--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -4310,3 +4310,8 @@ CRW;Crow;;;;;;;;;;;;;
 CRW_ADJ;Apsáalooke;;;;;;;;;;;;;
 PAW;Pawnee;;;;;;;;;;;;;
 PAW_ADJ;Chatiks;;;;;;;;;;;;;
+KSJ;South Kazakhstan;;;;;;;;;;;;;
+KSJ_absolute_monarchy;Senior Jüz;;;;;;;;;;;;;
+KSJ_ADJ;Senior Kazakh;;;;;;;;;;;;;
+KAZ_proletarian_dictatorship;SSR Kazakhstan;RSS Kazakhstan;SSR Kasachstan;SSR Kazachstan;SSR Kazajstán;RSS Kazaca;SSR Kazahsztán;SSR Kazachstán;SSR Kazahsztán;SSR Kazachstan;SSR Cazaquistão;ÑÑÐ Êàçàõñòàí;SSR Kazakstan;
+KAZ_radical_republic;The Semiriche Republic;;;;;;;;;;;;;
