--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -575,7 +575,7 @@ PROV914;Tarabulus;;;;;;;;;;;;;
 PROV1469;Uriankhai;;;;;;;;;;;;;
 PROV1181;Akmolinsk;;;;;;;;;;;;;
 PROV3106;Lake Balkhash;;;;;;;;;;;;;
-PROV2606;Balkhash;;;;;;;;;;;;;
+PROV2606;Karagandy;;;;;;;;;;;;;
 ARG_2379;Córdoba;;;;;;;;;;;;;
 ARG_2389;Pampas;;;;;;;;;;;;;
 ARG_2393;La Pampa;;;;;;;;;;;;;
