--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -9536,8 +9536,8 @@ PROV1177;Socotra;Socotra;Socotra;;Socotra;;;;;;;;;
 PROV1180;Taizz;Taizz;Taizz;;Taizz;;;;;;;;;
 PROV1182;Guryev;Guryev;Guryev;;Gureiev;;;;;;;;;
 PROV1183;Aqtobe;Aqtobe;Aqtobe;;Aqtobe;;;;;;;;;
-PROV1184;Kokshetau;Kokshetau;Kokshetau;;Kokshetau;;;;;;;;;
-PROV1187;Semipalatinsk;Semipalatinsk;Semipalatinsk;;Semipalátinsk;;;;;;;;;
+PROV1184;Semipalatinsk;Kokshetau;Kokshetau;;Kokshetau;;;;;;;;;
+PROV1187;Ayaguz;Semipalatinsk;Semipalatinsk;;Semipalátinsk;;;;;;;;;
 PROV1209;Kabul;Kabul;Kabul;;Kabul;;;;;;;;;
 PROV1212;Herat;Herat;Herat;;Herât;;;;;;;;;
 PROV1213;Bamyan;Bamyan;Bamyan;;Bamyan;;;;;;;;;
