--- a/GFM/localisation/000_persia_map.csv
+++ b/GFM/localisation/000_persia_map.csv
@@ -221,5 +221,5 @@ PROV4135;Andijan;;;;;;;;;;;;;
 PROV4136;Namagan;;;;;;;;;;;;;
 PROV4137;Merke;;;;;;;;;;;;;
 PROV4138;Tamshybulak;;;;;;;;;;;;;
-PROV4139;Ili;;;;;;;;;;;;;
+PROV4139;Tsarkent;;;;;;;;;;;;;
 PROV4140;Alty-Kuduk;;;;;;;;;;;;;
