--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -388,7 +388,7 @@ PROV130;Tha'tse Mathi';;;;;;;;;;;;;
 PROV111;Tukudeka;;;;;;;;;;;;;
 PROV112;Mitsiadazi;;;;;;;;;;;;;
 PROV106;Vétaneo'hé'e;;;;;;;;;;;;;
-PROV2702;Shalkar;;;;;;;;;;;;;
+PROV2702;Akti Kendi;;;;;;;;;;;;;
 PROV686;Merv;;;;;;;;;;;;;
 BUR_1334;Mandalay;;;;;;;;;;;;;
 PROV579;Chiloé;;;;;;;;;;;;;
@@ -540,7 +540,7 @@ PROV2677;Ilimsk;;;;;;;;;;;;;
 PROV2675;Erbogachen;;;;;;;;;;;;;
 PROV2701;Kansk;;;;;;;;;;;;;
 PROV1070;Yeniseysk;;;;;;;;;;;;;
-PROV2656;Baikit;;;;;;;;;;;;;
+PROV2656;Kushcheta;;;;;;;;;;;;;
 PROV2651;Mirny;;;;;;;;;;;;;
 PROV2674;Abakan;;;;;;;;;;;;;
 PROV2682;Obdorsk;;;;;;;;;;;;;
