Karakalpakstan added and names

--- a/GFM/localisation/0000Trigori_text.csv
+++ b/GFM/localisation/0000Trigori_text.csv
@@ -360,6 +360,12 @@ KHI_constitutional_empire;The Qungrat Empire;;;;;;;;;;;;;
 KHI_absolute_empire_ADJ;Qungrat;;;;;;;;;;;;;
 KHI_semi_constitutional_empire_ADJ;Qungrat;;;;;;;;;;;;;
 KHI_constitutional_empire_ADJ;Qungrat;;;;;;;;;;;;;
+KKP_absolute_empire;The Torani Empire;;;;;;;;;;;;;
+KKP_semi_constitutional_empire;The Torani Empire;;;;;;;;;;;;;
+KKP_constitutional_empire;The Torani Empire;;;;;;;;;;;;;
+KKP_absolute_empire_ADJ;Torani;;;;;;;;;;;;;
+KKP_semi_constitutional_empire_ADJ;Torani;;;;;;;;;;;;;
+KKP_constitutional_empire_ADJ;Torani;;;;;;;;;;;;;
 found_new_ca_empire_title;Found a New Empire in Central Asia;;;;;;;;;;;;;
 found_new_ca_empire_desc;The Lion and the Bear wish to hunt on our land. Have they no shame as they gaze upon the cities of the Silk Road, the homes of philosophers and mathematicians? Have they no fear as they tread on the spirits of Genghis Khan and Amir Timur? Let them know that a new Ghazi arises - last of the Great Conquerors - the final Empire in Central Asia.;;;;;;;;;;;;;
 EVTNAME700700;$COUNTRYNAME$;;;;;;;;;;;;;
@@ -386,6 +392,13 @@ KHI_radical;Inqilobchilar;;;;;;;;;;;;;;;;x;;;;
 KHI_radical_1;Taraqqiparvarlar;;;;;;;;;;;;;;;;x;;;;
 KHI_socialist;Yosh Xorazmliklar;;;;;;;;;;;;;;;;x;;;;
 KHI_communist;Xorazm Kommunistlar;;;;;;;;;;;;;;;;x;;;;
+KKP_conservative;To'ranilar;;;;;;;;;;;;;;;;x;;;;
+KKP_reactionary;Ulamo;;;;;;;;;;;;;;;;x;;;;
+KKP_liberal;Olako'zlar;;;;;;;;;;;;;;;;x;;;;
+KKP_radical;Inqilobchilar;;;;;;;;;;;;;;;;x;;;;
+KKP_radical_1;Taraqqiparvarlar;;;;;;;;;;;;;;;;x;;;;
+KKP_socialist;Yosh Qoraqalpoqliklar;;;;;;;;;;;;;;;;x;;;;
+KKP_communist;Qoraqalpoqlar Kommunistlar;;;;;;;;;;;;;;;;x;;;;
 BUK_conservative;Mang'itlar;;;;;;;;;;;;;;;;x;;;;
 BUK_reactionary;Ulamo;;;;;;;;;;;;;;;;x;;;;
 BUK_liberal;Ziyalilar;;;;;;;;;;;;;;;;x;;;;
