--- a/GFM/localisation/0000_GFM_Deer.csv
+++ b/GFM/localisation/0000_GFM_Deer.csv
@@ -26,3 +26,4 @@ alexandropol_title;Nicholas I's visit to Gyumri;;;;;;;;;;;;;
 alexandropol_desc;Ever since our nation's victory over the Qajar Empire in The Second Russo-Persian war, Gyumri has become one of the many developing cities in the Transcaucasus, bolstered further by the influx of around 3,000 Armenian families from numerous Ottoman cities on our border in the aftermath of the 1829 Russo-Turkish War. During a recent visit to Gyumri, Tsar Nicholas has passed a decree to rename the city to Alexandropol, in honour of his wife, Princess Charlotte of Prussia, who has changed her name to Alexandra Fyodorovna after converting to Orthodox Christianity.;;;;;;;;;;;;;
 kipchak_minor;Kipchak Minor;;;;;;;;;;;;;
 sart;Sart;;;;;;;;;;;;;
+AFG_absolute_monarchy;Barazkai Emirate;;;;;;;;;;;;;
