--- a/GFM/localisation/000_persia_map_countries.csv
+++ b/GFM/localisation/000_persia_map_countries.csv
@@ -77,6 +77,15 @@ KHI_parliamentary_republic_ADJ;Uzbek;;;;;;;;;;;;;
 KHI_fascist_dictatorship_ADJ;Uzbek;;;;;;;;;;;;;
 KHI_presidential_dictatorship_ADJ;Uzbek;;;;;;;;;;;;;
 KHI_proletarian_dictatorship_ADJ;Uzbek;;;;;;;;;;;;;
+KKP_parliamentary_republic;Karakalpakstan;;;;;;;;;;;;;
+KKP_democracy;Karakalpakstan;;;;;;;;;;;;;
+KKP_fascist_dictatorship;Karakalpakstan;;;;;;;;;;;;;
+KKP_presidential_dictatorship;Karakalpakstan;;;;;;;;;;;;;
+KKP_proletarian_dictatorship;Khorezm People's Republic;;;;;;;;;;;;
+KKP_parliamentary_republic_ADJ;Karakalpak;;;;;;;;;;;;;
+KKP_fascist_dictatorship_ADJ;Karakalpak;;;;;;;;;;;;;
+KKP_presidential_dictatorship_ADJ;Karakalpak;;;;;;;;;;;;;
+KKP_proletarian_dictatorship_ADJ;Karakalpak;;;;;;;;;;;;;
 KHR_ADJ;Khorasani;Khorasani;Khorasani;;;;;;;;;;;
 KHR;Khorasan;Khorasan;Khorasan;;;;;;;;;;;
 KHR_proletarian_dictatorship;Khorasan Republic;Khorasan Republic;Khorasan Republic;;;;;;;;;;;
@@ -97,7 +106,7 @@ KHZ_absolute_monarchy;Arabestan;Arabestan;Arabestan;;;;;;;;;;;
 KHZ_prussian_constitutionalism;Arabestan;Arabestan;Arabestan;;;;;;;;;;;
 KHZ_hms_government;Arabestan;Arabestan;Arabestan;;;;;;;;;;;
 KHZ_democracy;Arabestan;Arabestan;Arabestan;;;;;;;;;;;
-KNZ;Kunduz;;;;;;;;;;;;;
+KNZ;Khanate of Kunduz;;;;;;;;;;;;;
 KNZ_ADJ;Qataghan;;;;;;;;;;;;;
 KNZ_conservative;Royal Faction;Faction royale;Königsfraktion;;;;;;;;;;;
 KNZ_liberal;The Liberal Faction;Faction libérale;Die liberale Fraktion;;;;;;;;;;;
