--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -1281,9 +1281,10 @@ KAM_radical;The Libertains;Faction radicale;Die radikale Fraktion;;;;;;;;;;;
 KAM_socialist;The Socialists;Faction socialiste;Die sozialistische Fraktion;;;;;;;;;;;
 KAM_communist;The Communists;Faction communiste;Die kommunistische Fraktion;;;;;;;;;;;
 KAM_fascist;The Nationalists;Faction fasciste;Die faschistische Fraktion;;;;;;;;;;;
-KHI_absolute_monarchy;Khiva;;;;;;;;;;;;;
-BUK_absolute_monarchy;Bukhara;;;;;;;;;;;;;
-KOK_absolute_monarchy;Kokand;;;;;;;;;;;;;
+KHI_absolute_monarchy;Khanate of Khiva;;;;;;;;;;;;;
+KKP_absolute_monarchy;Karakalpak Khanate;;;;;;;;;;;;;
+BUK_absolute_monarchy;Emirate of Bukhara;;;;;;;;;;;;;
+KOK_absolute_monarchy;Khanate of Kokand;;;;;;;;;;;;;
 KAZ;Kazakhstan;;;;;;;;;;;;;
 KAZ_ADJ;Kazakh;;;;;;;;;;;;;
 KAZ_liberal;The Liberals;Faction libérale;Die liberale Fraktion;;;;;;;;;;;
