--- a/GFM/localisation/00_HPM_events.csv
+++ b/GFM/localisation/00_HPM_events.csv
@@ -1405,7 +1405,7 @@ EVTNAME986505;The Fall of Bedr Khan;;;;;;;;;;;;;
 EVTDESC986505;\n\nBedr Khan has been defeated and was deported to Crete, to live the rest of his life in exile. Kurdish autonomy has been revoked and the rebels have lost any hope of autonomy. The lands Bedr Khan took from the Persians were returned and the Assyrians breath with relief at the sight of the marching Ottoman troops.;;;;;;;;;;;;;
 EVT986505OPTA;Order has been restored.;;;;;;;;;;;;;
 EVTNAME90957;Bukharan Claims on Kandahar;;;;;;;;;;;;;
-EVTDESC90957;\n\nWith the fall of the Bukharan Emirate, their old claims in Kandahar are slipping away and the province is firmly in our hands.;;;;;;;;;;;;;
+EVTDESC90957;\n\nWith the fall of the Emirate of Bukhara, their old claims in Kandahar are slipping away and the province is firmly in our hands.;;;;;;;;;;;;;
 EVTOPTA90957;Good.;;;;;;;;;;;;;
 EVTNAME700016;Paraguay Curbed;;;;;;;;;;;;;
 EVTDESC700016;\n\nWith our outstanding claims resolved, it's time to re-establish diplomatic relations with our neighbors and let our conflicts behind.;;;;;;;;;;;;;
