--- a/GFM/localisation/00_John.csv
+++ b/GFM/localisation/00_John.csv
@@ -143,8 +143,8 @@ DEMANDINGPOMERANIA_PRU_WIN_TITLE;Renouncing our Claims in Pomerania;;;;;;;;;;;;;
 DEMANDINGPOMERANIA_PRU_WIN_TITLE;
 proclaim_swedish_empire_title;Proclaim the Swedish Empire;;;;;;;;;;;;;
 proclaim_swedish_empire_desc;
-claims_baltic_states_title;Claim the Baltic States;;;;;;;;;;;;;
-claims_baltic_states_desc;
+claims_baltic_states_title;Claim the Baltics;;;;;;;;;;;;;
+claims_baltic_states_desc;§RGain 10 infamy§! We owned Estonia from 1561 to 1721 and Livonia from 1629 to 1721 until they were both stolen from us during the Great Northern War (1700 - 1721). It's time to retake our old territories and incorporate them into the newly restored Swedish Empire!;;;;;;;;;;;;;
 take_back_pomerania_title;Take back Pomerania;;;;;;;;;;;;;
 take_back_pomerania_desc;
 reconquer_norway_title;Reconquer Norway;;;;;;;;;;;;;
