Scandinavia Customs Union dec complete

--- a/GFM/localisation/00_John.csv
+++ b/GFM/localisation/00_John.csv
@@ -138,9 +138,11 @@ SWEDISH_COUP_DESC;
 POLISH_HELP_TITLE;The Polish ask for Help;;;;;;;;;;;;;
 POLISH_HELP_DESC;
 PUPPET_PLR_TITLE;Poland becomes our Puppet;;;;;;;;;;;;;
-PUPPET_PLR_TITLE;
+PUPPET_PLR_DESC;
 DEMANDINGPOMERANIA_PRU_WIN_TITLE;Renouncing our Claims in Pomerania;;;;;;;;;;;;;
-DEMANDINGPOMERANIA_PRU_WIN_TITLE;
+DEMANDINGPOMERANIA_PRU_WIN_DESC;
+ABOLISHING_SLAVERY_SWE_TITLE;Abolishing Slavery;;;;;;;;;;;;;
+ABOLISHING_SLAVERY_SWE_DESC;
 proclaim_swedish_empire_title;Proclaim the Swedish Empire;;;;;;;;;;;;;
 proclaim_swedish_empire_desc;
 claims_baltic_states_title;Claim the Baltics;;;;;;;;;;;;;
@@ -160,3 +162,4 @@ disband_DNN_desc;
 small_scandinavian_population_growth;Small Scandinavian Population Boom;;;;;;;;;;;;;
 big_scandinavian_population_growth;Big Scandinavian Population Boom;;;;;;;;;;;;;
 scandinavian_immigrant_push;Scandinavian Population Emigration;;;;;;;;;;;;;
+scandinavian_monetary_union;Scandinavian Monetary Union;;;;;;;;;;;;;
