--- a/GFM/localisation/000_HPM_Misc.csv
+++ b/GFM/localisation/000_HPM_Misc.csv
@@ -2904,3 +2904,5 @@ JEBELGADIR;Our forces graciously retreated from a skirmish in the border of our 
 EICRESEARTCH;Congratulations, you have westernized! If your research points are negative, switching researches should fix it. Have fun!;;;;;;;;;;;;;
 INHAMINGAGONE;We can't continue control over the citizens of Inhamanga after the fall of the surrounding land to foreign nations.;;;;;;;;;;;;;
 ZOMBAGONE;We can't continue control over the citizens of Zomba after the fall of the surrounding land to foreign nations.;;;;;;;;;;;;;
+EVTDESC54679070;Without a land connection to Sulina, the owners of Tulça have taken it over.;;;;;;;;;;;;;
+EVTDESC54679071;Without a land connection to Sulina, its owners can no longer defend it. We will therefore take it over.;;;;;;;;;;;;;
