--- a/GFM/localisation/00_John.csv
+++ b/GFM/localisation/00_John.csv
@@ -143,6 +143,7 @@ DEMANDINGPOMERANIA_PRU_WIN_TITLE;Renouncing our Claims in Pomerania;;;;;;;;;;;;;
 DEMANDINGPOMERANIA_PRU_WIN_DESC;
 ABOLISHING_SLAVERY_SWE_TITLE;Abolishing Slavery;;;;;;;;;;;;;
 ABOLISHING_SLAVERY_SWE_DESC;
+1867_SCA_FAMINE_DESC;
 proclaim_swedish_empire_title;Proclaim the Swedish Empire;;;;;;;;;;;;;
 proclaim_swedish_empire_desc;
 claims_baltic_states_title;Claim the Baltics;;;;;;;;;;;;;
@@ -163,3 +164,4 @@ small_scandinavian_population_growth;Small Scandinavian Population Boom;;;;;;;;;
 big_scandinavian_population_growth;Big Scandinavian Population Boom;;;;;;;;;;;;;
 scandinavian_immigrant_push;Scandinavian Population Emigration;;;;;;;;;;;;;
 scandinavian_monetary_union;Scandinavian Monetary Union;;;;;;;;;;;;;
+scandinavian_famine;Scandinavian Famine;;;;;;;;;;;;;
