bugs are no more for my eyes

--- a/GFM/localisation/0000Sitka.csv
+++ b/GFM/localisation/0000Sitka.csv
@@ -354,6 +354,7 @@ TBS_conservative_1;Santanistas;Partido Moderado Liberal;Partido Moderado Liberal
 TBS_conservative_2;Circuito Nacional Porfirista;Partido Moderado Liberal;Partido Moderado Liberal;;;;;;;;;;;
 TBS_conservative_3;Porfiristas;Partido Constitucionalista;Partido Constitucionalista;;;;;;;;;;;
 TBS_conservative_4;Centristas;Partido Constitucionalista;Partido Constitucionalista;;;;;;;;;;;
+PNG_fascist;The Fascist Faction;;;;;;;;;;;;;
 TBS_fascist;Facción Fascista;;;;;;;;;;;;;
 TBS_fascist_1;Partido Fascista Tabasqueíro;;;;;;;;;;;;;
 TBS_fascist_2;Acción Revolucionaria Tabasqueírista;;;;;;;;;;;;;
