--- a/GFM/localisation/00_HPM_modifiers.csv
+++ b/GFM/localisation/00_HPM_modifiers.csv
@@ -590,7 +590,7 @@ reforming_to_dnb_desc;We are reforming our institutions to become the Danubian F
 hebrew_revival;Revival of the Hebrew Language;;;;;;;;;;;;;
 hebrew_revival_desc;With a modern revived form of Hebrew serving as our official and vernacular language, we are uniting Jews across all cultural and linguistic backgrounds into a new Israelite society.;;;;;;;;;;;;;
 standing_army_bach;A Standing Army of Soldiers;;;;;;;;;;;;;
-standing_army_bach_desc;Bach's reforms of the Austrian armed forces have led to a much-increased focus on a standing army and the development of prepared barraxks, to the notable detriment of stockpiles of reserve equipment and industry.;;;;;;;;;;;;;
+standing_army_bach_desc;Bach's reforms of the Austrian armed forces have led to a much-increased focus on a standing army and the development of prepared barracks, to the notable detriment of stockpiles of reserve equipment and industry.;;;;;;;;;;;;;
 fawning_army_bach;A Fawning Army of Sneaks;;;;;;;;;;;;;
 fawning_army_bach_desc;Bach's reforms of the police have led to a successful unit of secret police, capable of putting down much unwanted discourse., despite their severe lack of popularity.;;;;;;;;;;;;;
 france_land_crisis;French Land Crisis;;;;;;;;;;;;;
