--- a/GFM/localisation/FlavourMod_wars.csv
+++ b/GFM/localisation/FlavourMod_wars.csv
@@ -294,3 +294,7 @@ NORMAL_CIVIL_WAR_NAME_SWI_NCT;The Sonderbund War;;;;;;;;;;;;;
 NORMAL_WAR_BOXER_NAME;The Boxer Rebellion;$ORDER$ rébellion des Boxers;$ORDER$Boxer Aufstand;;;;;;;;;;;
 NORMAL_WAR_PUPPET_NAME_TUR_WAL;The$ORDER$Wallachian Revolution;;;;;;;;;;;;;
 AGRESSION_WAR_PUPPET_NAME_TUR_WAL;The$ORDER$Wallachian Revolution;;;;;;;;;;;;;
+NORMAL_WAR_LIBERATE_PUPPET_NO_INFAMY_NAME_TUR_FRA;The$ORDER$Turkish War of Algerian Liberation;;;;;;;;;;;;;
+AGRESSION_WAR_LIBERATE_PUPPET_NO_INFAMY_NAME_TUR_BOR;The$ORDER$Turkish War of Algerian Liberation;;;;;;;;;;;;;
+NORMAL_WAR_LIBERATE_PUPPET_NO_INFAMY_NAME_ALA_FRA;The$ORDER$Alawite War of Algerian Liberation;;;;;;;;;;;;;
+AGRESSION_WAR_LIBERATE_PUPPET_NO_INFAMY_NAME_ALA_BOR;The$ORDER$Alawite War of Algerian Liberation;;;;;;;;;;;;;
