--- a/GFM/localisation/newtext.csv
+++ b/GFM/localisation/newtext.csv
@@ -371,7 +371,7 @@ MCK_conservative;Palace Faction;Faction palatiale;Palastfraktion;;Facción Palaci
 MCK_fascist;Fascist Party;Parti fasciste;Faschistische Partei;;Partido Fascista;;;;;;;;;
 MCK_radical;A Very Unlikely Candidate;Un candidat très improbable;Ein äußerst merkwürdiger Kandidat;;Un candidato muy improbable;;;;;;;;;
 CHI_1504;Kwangsi;Kwangsi;Kwangsi;;Kwangsi;;;;;;;;;
-GXI_ADJ;Kwangsi;Kwangsi;Kwangsi;;Kwangsi;;;;;;;;;
+GXI_ADJ;Guangxi;Kwangsi;Kwangsi;;Kwangsi;;;;;;;;;
 GXI_reactionary;Rongting Faction;Faction Rongting;Rongting-Fraktion;;Facción Rongting;;;;;;;;;
 GXI_socialist;Socialist Party;Parti socialiste;Sozialistische Partei;;Partido Socialista;;;;;;;;;
 GXI_communist;Chinese Communist Party;Parti communiste chinois;Kommunistische Partei China;;Partido Comunista Chino;;;;;;;;;
