--- a/GFM/localisation/000_HPM_Misc.csv
+++ b/GFM/localisation/000_HPM_Misc.csv
@@ -2906,3 +2906,4 @@ INHAMINGAGONE;We can't continue control over the citizens of Inhamanga after the
 ZOMBAGONE;We can't continue control over the citizens of Zomba after the fall of the surrounding land to foreign nations.;;;;;;;;;;;;;
 EVTDESC54679070;Without a land connection to Sulina, the owners of Tulça have taken it over.;;;;;;;;;;;;;
 EVTDESC54679071;Without a land connection to Sulina, its owners can no longer defend it. We will therefore take it over.;;;;;;;;;;;;;
+SAINTHELENAEIC;With the Government of India Act of 1833, the East India Company has ceded their ownership of Saint Helena to create a new, British crown colony in the islands' honour..;;;;;;;;;;;;;
