--- a/GFM/localisation/00_John.csv
+++ b/GFM/localisation/00_John.csv
@@ -144,6 +144,10 @@ DEMANDINGPOMERANIA_PRU_WIN_DESC;
 ABOLISHING_SLAVERY_SWE_TITLE;Abolishing Slavery;;;;;;;;;;;;;
 ABOLISHING_SLAVERY_SWE_DESC;
 1867_SCA_FAMINE_DESC;
+1867_RIKSDAG_TITLE;The new Riksdag;;;;;;;;;;;;;
+1867_RIKSDAG_DESC;
+1909_RIKSDAG_TITLE;Expanding the Suffrage Rights;;;;;;;;;;;;;
+1909_RIKSDAG_DESC;
 proclaim_swedish_empire_title;Proclaim the Swedish Empire;;;;;;;;;;;;;
 proclaim_swedish_empire_desc;
 claims_baltic_states_title;Claim the Baltics;;;;;;;;;;;;;
