Events removing flags 'n more

--- a/GFM/localisation/00_John.csv
+++ b/GFM/localisation/00_John.csv
@@ -148,6 +148,10 @@ ABOLISHING_SLAVERY_SWE_DESC;
 1867_RIKSDAG_DESC;
 1909_RIKSDAG_TITLE;Expanding the Suffrage Rights;;;;;;;;;;;;;
 1909_RIKSDAG_DESC;
+DANISH_INDEPENDENCE_DEN_WIN_TITLE;The Aftermath of our Independence;;;;;;;;;;;;;
+DANISH_INDEPENDENCE_DEN_WIN_DESC;
+DENMARK_PUPPET_WAR_SWE_WIN_TITLE;Taking over Denmark;;;;;;;;;;;;;
+DENMARK_PUPPET_WAR_SWE_WIN_DESC;
 proclaim_swedish_empire_title;Proclaim the Swedish Empire;;;;;;;;;;;;;
 proclaim_swedish_empire_desc;
 claims_baltic_states_title;Claim the Baltics;;;;;;;;;;;;;
@@ -160,6 +164,8 @@ crush_danes_title;Crush the Danes;;;;;;;;;;;;;
 crush_danes_desc;
 swedish_independence_title;Declare Swedish Independence;;;;;;;;;;;;;
 swedish_independence_desc;
+danish_independence_title;Declare Danish Independence;;;;;;;;;;;;;
+danish_independence_desc;
 scandinavian_prosperity_title;Enact Scandinavian Prosperity;;;;;;;;;;;;;
 scandinavian_prosperity_desc;
 disband_DNN_title;Disband Denmark-Norway;;;;;;;;;;;;;
