--- a/GFM/localisation/00_John.csv
+++ b/GFM/localisation/00_John.csv
@@ -152,6 +152,10 @@ DANISH_INDEPENDENCE_DEN_WIN_TITLE;The Aftermath of our Independence;;;;;;;;;;;;;
 DANISH_INDEPENDENCE_DEN_WIN_DESC;
 DENMARK_PUPPET_WAR_SWE_WIN_TITLE;Taking over Denmark;;;;;;;;;;;;;
 DENMARK_PUPPET_WAR_SWE_WIN_DESC;
+FINLAND_WAR_SWE_VICTORY_TITLE;Victory over the Russians;;;;;;;;;;;;;
+FINLAND_WAR_SWE_VICTORY_DESC;
+FINLAND_WAR_RUS_VICTORY_TITLE;Victory over the Swedes;;;;;;;;;;;;;
+FINLAND_WAR_RUS_VICTORY_DESC;
 proclaim_swedish_empire_title;Proclaim the Swedish Empire;;;;;;;;;;;;;
 proclaim_swedish_empire_desc;
 claims_baltic_states_title;Claim the Baltics;;;;;;;;;;;;;
