changes checked for my own mistakes

--- a/GFM/localisation/00_HPM_events.csv
+++ b/GFM/localisation/00_HPM_events.csv
@@ -2405,7 +2405,7 @@ EVT97635OPTA;We will seek allies among the southern tozama.;;;;;;;;;;;;;
 EVT97635OPTB;We will seek allies among the northern fudai.;;;;;;;;;;;;;
 EVTDESC97636;\n\nThere is a growing restlessness among the daimyo, with some whispering that the Tokugawa Shogunate has grown weak and is unable to deal with the encroachment of foreign powers. We have received word that the Shogunate has consulted with the outsider tozama, perhaps seeking new allies. If so, this compounds injury with insult.;;;;;;;;;;;;;
 EVT97636OPTA;Perhaps it is time for a change.;;;;;;;;;;;;;
-EVTDESC97637;There is a growing restlessness among the daimyo, with some whispering that the Tokugawa Shogunate has grown weak and is unable to deal with the encroachment of foreign powers. We have received word that the Shogunate has consulted with the fudai daimyo, perhaps seeking new allies. This is hardly unexpected, though the tozama agree this makes it clear that the Shogunate is not the future of Japan.;;;;;;;;;;;;;
+EVTDESC97637;\n\nThere is a growing restlessness among the daimyo, with some whispering that the Tokugawa Shogunate has grown weak and is unable to deal with the encroachment of foreign powers. We have received word that the Shogunate has consulted with the fudai daimyo, perhaps seeking new allies. This is hardly unexpected, though the tozama agree this makes it clear that the Shogunate is not the future of Japan.;;;;;;;;;;;;;
 EVT97637OPTA;Perhaps it is time for a change.;;;;;;;;;;;;;
 EVTNAME97640;The Meiji Rebellion;;;;;;;;;;;;;
 EVTDESC97640;\n\nThe $FROMCOUNTRY_ADJ$ clan has made a bold move: they have declared they intend to see the emperor restored to rule over all of Japan. The $COUNTRY_ADJ$ must make a decision: do we throw in our support with the imperial court, or do we uphold our duty and support the Shogun?;;;;;;;;;;;;;
@@ -2462,7 +2462,7 @@ EVTDESC97675;\n\nThe Chinese have fallen into warring factions, all but crumblin
 EVT97675OPTA;We should take advantage while we can. §RGain 3 infamy§W;;;;;;;;;;;;;
 EVT97675OPTB;This is not in our best interest.;;;;;;;;;;;;;
 EVTNAME97600;Sakoku;;;;;;;;;;;;;
-EVTDESC97600;Meaning 'locked country', Sakoku was the foreign relations policy of Japan instituted by the Tokugawa Shogunate in the 17th century, with no foreigner allowed to enter the country on pain of death. While some contact with westerners was permitted in the south, at the Dejima trade enclave in particular, such contact was strictly regulated and kept Japan in a state of isolation from the rest of the world.;;;;;;;;;;;;;
+EVTDESC97600;\n\nMeaning 'locked country', Sakoku was the foreign relations policy of Japan instituted by the Tokugawa Shogunate in the 17th century, with no foreigner allowed to enter the country on pain of death. While some contact with westerners was permitted in the south, at the Dejima trade enclave in particular, such contact was strictly regulated and kept Japan in a state of isolation from the rest of the world.;;;;;;;;;;;;;
 EVT97600OPTA;This is the proper way for Japan.;;;;;;;;;;;;;
 EVTNAME97601;Rangaku;;;;;;;;;;;;;
 EVTDESC97601;Meaning 'Western Learning', Rangaku referred to the body of knowledge developed by Japan through its contacts with the Dutch enclave at Dejima. Despite the enforced isolation of the nation, this policy of learning allowed western influences to spread -- particularly in the southern domains of Satsuma and Choshu.;;;;;;;;;;;;;
