Rebels, Renames, REvents

--- a/GFM/localisation/0000_GFM_Deer.csv
+++ b/GFM/localisation/0000_GFM_Deer.csv
@@ -20,3 +20,4 @@ alexandropol_desc;\n\nEver since our nation's victory over the Qajar Empire in T
 kipchak_minor;Kipchak Minor;;;;;;;;;;;;;
 sart;Sart;;;;;;;;;;;;;
 AFG_absolute_monarchy;Barazkai Emirate;;;;;;;;;;;;;
+CASPIAN1;\n\nAs our control over the nothern coast solidifies, we are able to project more and more power southwards down the eastern coast of the Caspian Sea. While the land is relatively desolate comparted to the southern and western coast, mainly consisting of dry deserts in the north and mountains in the south populated by nomadic Turkmen and Kazakhs, a small foothold in the region will be useful in our attempt to increase our regional power projection.;;;;;;;;;;;;;
