--- a/GFM/localisation/000_HPM_Misc.csv
+++ b/GFM/localisation/000_HPM_Misc.csv
@@ -483,7 +483,7 @@ KHI_3298;Turkestan;;;;;;;;;;;;;
 KHI_1195;Ferghana;;;;;;;;;;;;;
 KHI_1200;Bukhara;;;;;;;;;;;;;
 TAJ_1208;Khatlon;;;;;;;;;;;;;
-RUS_1196;Transcaspia;;;;;;;;;;;;;
+RUS_1196;Turkmenia;;;;;;;;;;;;;
 BUK_1199;Samarkand;;;;;;;;;;;;;
 bw_state_rename_title;Rename Baden-Württemberg;;;;;;;;;;;;;
 bw_state_rename_desc;Baden and Württemberg are rightfully $COUNTRY_ADJ$, and should use $COUNTRY_ADJ$ names.;;;;;;;;;;;;;
