event for sweden losing baltic war

--- a/GFM/localisation/00_John.csv
+++ b/GFM/localisation/00_John.csv
@@ -156,6 +156,8 @@ FINLAND_WAR_SWE_VICTORY_TITLE;Victory over the Russians;;;;;;;;;;;;;
 FINLAND_WAR_SWE_VICTORY_DESC;
 FINLAND_WAR_RUS_VICTORY_TITLE;Victory over the Swedes;;;;;;;;;;;;;
 FINLAND_WAR_RUS_VICTORY_DESC;
+BALTIC_WAR_RUS_VICTORY_TITLE;Victory over the Swedes;;;;;;;;;;;;;
+BALTIC_WAR_RUS_VICTORY_DESC;
 proclaim_swedish_empire_title;Proclaim the Swedish Empire;;;;;;;;;;;;;
 proclaim_swedish_empire_desc;
 claims_baltic_states_title;Claim the Baltics;;;;;;;;;;;;;
