War history fix

--- a/GFM/localisation/FlavourMod_wars.csv
+++ b/GFM/localisation/FlavourMod_wars.csv
@@ -298,4 +298,4 @@ AGRESSION_WAR_PUPPET_NAME_TUR_WAL;The$ORDER$Wallachian Revolution;;;;;;;;;;;;;
 CUT_DOWN_TO_SIZE_NO_INFAMY_WAR_NAME_SWE_DNN;The Scandinavian War;;;;;;;;;;;;;
 NORMAL_WAR_LIBERATE_NAME_SWE_PRU;$ORDER$Pomeranian War;;;;;;;;;;;;;
 NORMAL_WAR_PUPPET_NAME_SWE_DEN;Dano-Swedish War of$YEAR$;;;;;;;;;;;;;
-WAR_ALL_CORES_NAME_SWE_FIN;$ORDER$War of the Hats;;;;;;;;;;;;;
+WAR_ALL_CORES_NAME_SWE_FIN;$ORDER$Finish War;;;;;;;;;;;;;
