just added 4 provs 👍

--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -1480,3 +1480,7 @@ PROV4123;Santafé;;;;;;;;;;;;;
 PROV2293;Nó'ciria;;;;;;;;;;;;;
 PROV4124;Travun-qué Laufquen;;;;;;;;;;;;;
 PROV4125;Chillhue;;;;;;;;;;;;;
+PROV4142;Noamlakee;;;;;;;;;;;;;
+PROV4143;Mólališ;;;;;;;;;;;;;
+PROV4144;Goyatöka;;;;;;;;;;;;;
+PROV4145;Washakie;;;;;;;;;;;;;
