Khiva war (Doesnt work), renames, and misc fixes
QAJAR CORES IN TURKMENIA WILL BE READDED THROUGH AN EVENT LATER
NOT AN ERROR

--- a/GFM/localisation/0000_GFM_Deer.csv
+++ b/GFM/localisation/0000_GFM_Deer.csv
@@ -21,3 +21,7 @@ kipchak_minor;Kipchak Minor;;;;;;;;;;;;;
 sart;Sart;;;;;;;;;;;;;
 AFG_absolute_monarchy;Barazkai Emirate;;;;;;;;;;;;;
 CASPIAN1;\n\nAs our control over the nothern coast solidifies, we are able to project more and more power southwards down the eastern coast of the Caspian Sea. While the land is relatively desolate comparted to the southern and western coast, mainly consisting of dry deserts in the north and mountains in the south populated by nomadic Turkmen and Kazakhs, a small foothold in the region will be useful in our attempt to increase our regional power projection.;;;;;;;;;;;;;
+AKMECHETLOSS;\n\nWith our control over the city of Hazrat-i-Turkistan lost, it has become impossible for us to supply and maintain our line of forts along the Syr-Darya river, including the key fortress of Ak-Mechet. The territory now rests in the hands of the local Kazakh nomads belonging to the Middle Juz. We can only hope this turn of events is only a temporary set-back...;;;;;;;;;;;;;
+AKMECHETGAIN;\n\nWith the Kokandi Khan having lost the key city of Hazrat-i-Turkistan, they can no longer defend it. We will therefore take it over.;;;;;;;;;;;;;
+KHIVAMERVINVASION;\n\nINVASION TIME!;;;;;;;;;;;;;
+KHIVAMERVINVASIONTKM;\n\nOh dear!;;;;;;;;;;;;;
