--- a/GFM/localisation/000_persia_map.csv
+++ b/GFM/localisation/000_persia_map.csv
@@ -73,7 +73,7 @@ PROV1193;Ak-Mechet;;;;;;;;;;;;;
 PROV1194;Kuryk;;;;;;;;;;;;;
 PROV1195;Tashkent;;;;;;;;;;;;;
 PROV1196;Damly;;;;;;;;;;;;;
-PROV1197;Turkestan;;;;;;;;;;;;;
+PROV1197;Turkistan;;;;;;;;;;;;;
 PROV1198;Bukhoro;;;;;;;;;;;;;
 PROV1199;Samarqand;;;;;;;;;;;;;
 PROV1200;Qarshi;;;;;;;;;;;;;
