--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -389,7 +389,7 @@ PROV111;Tukudeka;;;;;;;;;;;;;
 PROV112;Mitsiadazi;;;;;;;;;;;;;
 PROV106;Vétaneo'hé'e;;;;;;;;;;;;;
 PROV2702;Akti Kendi;;;;;;;;;;;;;
-PROV686;Merv;;;;;;;;;;;;;
+PROV686;Merw;;;;;;;;;;;;;
 BUR_1334;Mandalay;;;;;;;;;;;;;
 PROV579;Chiloé;;;;;;;;;;;;;
 PROV574;Koblenz;;;;;;;;;;;;;
@@ -573,7 +573,7 @@ PROV1110;Qal'eh-ye Chahriq;;;;;;;;;;;;;
 PROV2414;Cizre;;;;;;;;;;;;;
 PROV914;Tarabulus;;;;;;;;;;;;;
 PROV1469;Uriankhai;;;;;;;;;;;;;
-PROV1181;Akmolinsk;;;;;;;;;;;;;
+PROV1181;Akmoly;;;;;;;;;;;;;
 PROV3106;Lake Balkhash;;;;;;;;;;;;;
 PROV2606;Karagandy;;;;;;;;;;;;;
 ARG_2379;Córdoba;;;;;;;;;;;;;
