--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -3686,6 +3686,8 @@ CHD_prussian_constitutionalism;Baguirmi;;;;;;;;;;;;;
 CHD_prussian_constitutionalism_ADJ;Baguirmi;;;;;;;;;;;;;
 CHD_hms_government;Baguirmi;;;;;;;;;;;;;
 CHD_hms_government_ADJ;Baguirmi;;;;;;;;;;;;;
+CHD_theocracy;Baguirmi;;;;;;;;;;;;;
+CHD_theocracy_ADJ;Baguirmi;;;;;;;;;;;;;
 CMR;Cameroon;;;;;;;;;;;;;
 CMR_ADJ;Cameroonian;;;;;;;;;;;;;
 IDM;Igala;Igala;Igala;;Igala;;;;;;;;;
