--- a/GFM/localisation/000_HPM_Misc.csv
+++ b/GFM/localisation/000_HPM_Misc.csv
@@ -2907,3 +2907,6 @@ ZOMBAGONE;We can't continue control over the citizens of Zomba after the fall of
 EVTDESC54679070;Without a land connection to Sulina, the owners of Tulça have taken it over.;;;;;;;;;;;;;
 EVTDESC54679071;Without a land connection to Sulina, its owners can no longer defend it. We will therefore take it over.;;;;;;;;;;;;;
 SAINTHELENAEIC;With the Government of India Act of 1833, the East India Company has ceded their ownership of Saint Helena to create a new, British crown colony in the islands' honour..;;;;;;;;;;;;;
+WEWONBATTLEMARICOYEAHMADEUP;We have managed to win a battle near the Marico River against $FROMCOUNTRY$ and we can now settle in the plains east of it for centuries to come.;;;;;;;;;;;;;
+GREATWADKALTABUONE;The $FROMCOUNTRY_ADJ$ have accepted sending an expeditionary force to Abyssinia to pacify the region.;;;;;;;;;;;;;
+GREATWADKALTABUTWO;The $FROMCOUNTRY_ADJ$ have rejected sending an expeditionary force to Abyssinia to pacify the region.;;;;;;;;;;;;;
