Kenesary event chain start

--- a/GFM/localisation/all_event_descriptions.csv
+++ b/GFM/localisation/all_event_descriptions.csv
@@ -787,7 +787,7 @@ EVTDESC123546;\n\nAfter our victory in the Lorraine war, we have been assigned r
 EVTDESC123547;\n\nAfter our victory in the Lorraine war, we have been assigned rule of Kleves.;;;;;;;;;;;;;
 EVTDESC123548;\n\nAfter our defeat in the Lorraine war, the French-lead coalition has begun occupying our industrial heartland on the west bank of the Rhine.;;;;;;;;;;;;;
 EVTDESC123549;\n\nThe Miskito indians have been driven from their main reserve in Bluefields and only own Brus Laguna. We shall seize it from them!;;;;;;;;;;;;;
-EVTDESC123553;\n\nThe last ruler of the Bukey Horde, Zhangir Khan, has passed away without heirs. We must fully integrate them into the Russian Empire, furthering advances into central asia.;;;;;;;;;;;;;
+EVTDESC123553;\n\nThe last ruler of the Bukey Horde, the young Sahib Kerei Khan, has passed away without an heir. We must fully integrate them into the Russian Empire, furthering advances into Central Asia.;;;;;;;;;;;;;
 EVTDESC34257423;\n\nAfter our conquest of the Khiva Khanate, we can now take our turn to conquer the hinterlands of Turkmenistan, a sparsely-populated area.;;;;;;;;;;;;;
 EVTDESC123554;\n\nNatives in Ceylon are revolting against British rule.;;;;;;;;;;;;;
 EVTDESC123558;\n\nThe Mexicans have agreed to pay us 600000 pesos.;;;;;;;;;;;;;
