--- a/GFM/localisation/0000Trigori_text.csv
+++ b/GFM/localisation/0000Trigori_text.csv
@@ -474,12 +474,12 @@ BDK_semi_constitutional_empire_ADJ;Yarid;;;;;;;;;;;;;
 BDK_constitutional_empire_ADJ;Yarid;;;;;;;;;;;;;
 BDK_conservative;Yaridlar;;;;;;;;;;;;;
 KAZ_proletarian_dictatorship;Kazakhstan;RSS Kazakhstan;SSR Kasachstan;SSR Kazachstan;SSR Kazajstán;RSS Kazaca;SSR Kazahsztán;SSR Kazachstán;SSR Kazahsztán;SSR Kazachstan;SSR Cazaquistão;ÑÑÐ Êàçàõñòàí;SSR Kazakstan;
-KAZ_absolute_empire;The White Horde;;;;;;;;;;;;;
-KAZ_semi_constitutional_empire;The White Horde;;;;;;;;;;;;;
-KAZ_constitutional_empire;The White Horde;;;;;;;;;;;;;
-KAZ_absolute_empire_ADJ;White Horde;;;;;;;;;;;;;
-KAZ_semi_constitutional_empire_ADJ;White Horde;;;;;;;;;;;;;
-KAZ_constitutional_empire_ADJ;White Horde;;;;;;;;;;;;;
+KAZ_absolute_empire;The Kazakh Khanate;;;;;;;;;;;;;
+KAZ_semi_constitutional_empire;The Kazakh Khanate;;;;;;;;;;;;;
+KAZ_constitutional_empire;The Kazakh Khanate;;;;;;;;;;;;;
+KAZ_absolute_empire_ADJ;Kazakh;;;;;;;;;;;;;
+KAZ_semi_constitutional_empire_ADJ;Kazakh;;;;;;;;;;;;;
+KAZ_constitutional_empire_ADJ;Kazakh;;;;;;;;;;;;;
 KAZ_conservative;Borjigin-Tore;;;;;;;;;;;;;
 KAZ_liberal;Taraqqiparvarlar;Faction libérale;Die liberale Fraktion;;;;;;;;;;;
 KAZ_liberal_2;Alash Partiasy;Faction libérale;Die liberale Fraktion;;;;;;;;;;;
